crates/plotnik-lib/tests/02-parser/recovery_validation/unnamed_def_not_allowed_in_middle.txt
(first)
Expr = (identifier)
(last)
==== diagnostics ====
error: definition must be named
 --> query.ptk:1:1
  |
1 | (first)
  | ^^^^^^^
  |
help: give it a name like `Name = (first)`

error: definition must be named
 --> query.ptk:3:1
  |
3 | (last)
  | ^^^^^^
  |
help: give it a name like `Name = (last)`
